vlib/v/checker/tests/custom_comptime_define_error.vv
fn main() {
        $if mysymbol? {
			// this should not produce checker errors, but will print only with `-d mysymbol`
			println('optional compitme define works')
        }
        $if mysymbol {
			// this will produce a checker error when `-d mysymbol` is not given on the CLI
            println('non optional comptime define works')
        }
}
